cmake_minimum_required(VERSION 3.14)
set(NAME test)
project(${NAME})
set(CMAKE_CXX_STANDARD 14)
message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
if(NOT APPLE AND NOT MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
endif()
get_filename_component(CCAPI_CPP_PROJECT_DIR ../ ABSOLUTE)
message(STATUS "CCAPI_CPP_PROJECT_DIR: ${CCAPI_CPP_PROJECT_DIR}")
set(RAPIDJSON_INCLUDE_DIR ${CCAPI_CPP_PROJECT_DIR}/dependency/rapidjson/include)
set(WEBSOCKETPP_INCLUDE_DIR ${CCAPI_CPP_PROJECT_DIR}/dependency/websocketpp)
set(BOOST_INCLUDE_DIR ${CCAPI_CPP_PROJECT_DIR}/dependency/boost)
find_package(OpenSSL REQUIRED)
include_directories(${CCAPI_CPP_PROJECT_DIR}/include ${WEBSOCKETPP_INCLUDE_DIR} ${BOOST_INCLUDE_DIR} ${RAPIDJSON_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
if (WIN32)
  set(ADDITIONAL_LINK_LIBRARIES ws2_32)
endif()
link_libraries(OpenSSL::Crypto OpenSSL::SSL ${ADDITIONAL_LINK_LIBRARIES})
set(SOURCE_LOGGER ${CCAPI_CPP_PROJECT_DIR}/test/ccapi_logger.cpp)
option(BUILD_BUILD_TEST "Build build_test")
option(BUILD_UNIT_TEST "Build unit_test")
if(BUILD_TEST_BUILD)
	add_subdirectory(test_build)
endif()
if(BUILD_TEST_UNIT)
	enable_testing()
	add_subdirectory(test_unit)
endif()
