set(NAME build_test)
project(${NAME})
set(SERVICE_LIST "MARKET_DATA")
set(EXCHANGE_LIST "COINBASE" "GEMINI" "KRAKEN" "BITSTAMP" "BITFINEX" "BITMEX" "BINANCE_US" "BINANCE" "BINANCE_FUTURES" "HUOBI" "OKEX")
foreach(SERVICE IN LISTS SERVICE_LIST)
    message(STATUS "SERVICE=${SERVICE}")
    foreach(EXCHANGE IN LISTS EXCHANGE_LIST)
        message(STATUS "EXCHANGE=${EXCHANGE}")
        set(CCAPI_CPP_TARGET_NAME "${SERVICE}__${EXCHANGE}")
        add_executable("${CCAPI_CPP_TARGET_NAME}" ${SOURCE_LOGGER} test.cpp)
        target_compile_definitions("${CCAPI_CPP_TARGET_NAME}" PRIVATE "ENABLE_SERVICE_${SERVICE}" "ENABLE_EXCHANGE_${EXCHANGE}")
        if("${EXCHANGE}" STREQUAL "HUOBI" OR "${EXCHANGE}" STREQUAL "OKEX")
          message(STATUS "need zlib")
		  find_package(ZLIB REQUIRED)
		  target_link_libraries("${CCAPI_CPP_TARGET_NAME}" PRIVATE ZLIB::ZLIB)
		endif()
    endforeach()
endforeach()