if(SINGLE_ORDER_EXECUTION_CMAKE_PROJECT_NAME)
  set(NAME ${SINGLE_ORDER_EXECUTION_CMAKE_PROJECT_NAME})
else()
  set(NAME single_order_execution)
endif()
# set(NAME single_order_execution)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_SERVICE_MARKET_DATA)
add_compile_definitions(CCAPI_ENABLE_SERVICE_EXECUTION_MANAGEMENT)
add_executable(${NAME} main.cpp)
if(NOT CCAPI_LEGACY_USE_WEBSOCKETPP)
  add_dependencies(${NAME} boost rapidjson)
endif()
