if(SPOT_MARKET_MAKING_CMAKE_PROJECT_NAME)
  set(NAME ${SPOT_MARKET_MAKING_CMAKE_PROJECT_NAME})
else()
  set(NAME spot_market_making)
endif()
# set(NAME spot_market_making)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_SERVICE_MARKET_DATA)
add_compile_definitions(CCAPI_ENABLE_SERVICE_EXECUTION_MANAGEMENT)
add_executable(${NAME} main.cpp)
if(NOT CCAPI_LEGACY_USE_WEBSOCKETPP)
  add_dependencies(${NAME} boost rapidjson)
endif()
