set(NAME fix_advanced)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_SERVICE_FIX)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_COINBASE)
set(HFFIX_INCLUDE_DIR ${CCAPI_PROJECT_DIR}/dependency/hffix/include)
add_executable(${NAME} main.cpp)
target_include_directories(${NAME} PRIVATE ${HFFIX_INCLUDE_DIR})
