set(NAME fix_simple)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_SERVICE_FIX)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_COINBASE)
add_executable(${NAME} main.cpp)
if(NOT CCAPI_LEGACY_USE_WEBSOCKETPP)
  add_dependencies(${NAME} boost rapidjson)
endif()
target_include_directories(${NAME} PRIVATE ${HFFIX_INCLUDE_DIR})
