set(NAME rest_vs_fix)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_SERVICE_EXECUTION_MANAGEMENT)
add_compile_definitions(CCAPI_ENABLE_SERVICE_FIX)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_COINBASE)
add_compile_definitions(CCAPI_COINBASE_URL_REST_BASE="https://api-public.sandbox.pro.coinbase.com")
add_compile_definitions(CCAPI_COINBASE_URL_FIX_BASE="tcp+ssl://fix-public.sandbox.pro.coinbase.com:4198")
set(HFFIX_INCLUDE_DIR ${CCAPI_PROJECT_DIR}/dependency/hffix/include)
add_executable(${NAME} main.cpp)
# add_executable(${NAME}_openssl main.cpp)
# target_compile_definitions(${NAME}_openssl PRIVATE CCAPI_SHA_USE_OPENSSL)
target_include_directories(${NAME} PRIVATE ${HFFIX_INCLUDE_DIR})
# target_include_directories(${NAME}_openssl PRIVATE ${HFFIX_INCLUDE_DIR})
