set(NAME rest_vs_fix)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_SERVICE_EXECUTION_MANAGEMENT)
add_compile_definitions(CCAPI_ENABLE_SERVICE_FIX)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_COINBASE)
add_compile_definitions(CCAPI_COINBASE_URL_REST_BASE="https://api-public.sandbox.pro.coinbase.com")
add_compile_definitions(CCAPI_COINBASE_URL_FIX_BASE="tcp+ssl://fix-public.sandbox.pro.coinbase.com:4198")
if(USE_BOOST_BEAST_WEBSOCKET)
  message(STATUS "use boost beast websocket")
  add_compile_definitions(CCAPI_USE_BOOST_BEAST_WEBSOCKET)
	include_directories(${CCAPI_PROJECT_DIR}/include ${BOOST_INCLUDE_DIR} ${RAPIDJSON_INCLUDE_DIR} ${HFFIX_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
else()
  message(STATUS "use websocketpp")
  set(RAPIDJSON_INCLUDE_DIR ${CCAPI_PROJECT_DIR}/dependency/rapidjson/include)
  set(WEBSOCKETPP_INCLUDE_DIR ${CCAPI_PROJECT_DIR}/dependency/websocketpp)
  set(BOOST_INCLUDE_DIR ${CCAPI_PROJECT_DIR}/dependency/boost)
  set(HFFIX_INCLUDE_DIR ${CCAPI_PROJECT_DIR}/dependency/hffix/include)
  include_directories(${CCAPI_PROJECT_DIR}/include ${WEBSOCKETPP_INCLUDE_DIR} ${BOOST_INCLUDE_DIR} ${RAPIDJSON_INCLUDE_DIR} ${HFFIX_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
endif()
add_executable(${NAME} main.cpp)
target_include_directories(${NAME} PRIVATE ${HFFIX_INCLUDE_DIR})
