name:                spec-parse-fields
version:             0.1.0.0
synopsis:            Generate file hffix_fields.hpp from FIX specifications
homepage:            https://github.com/jamesdbrock/hffix
license:             OtherLicense
license-file:        LICENSE
author:              James D. Brock
maintainer:          jamesbrock@gmail.com
copyright:           James D. Brock
category:            personal
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spec-parse-fields
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , text
                       , text-format
                       , containers
                       , xml-types
                       , xml-conduit
                       , data-default-class
                       , attoparsec
                       , mtl
