set(NAME hmac)
project(${NAME})
add_executable(${NAME} ${SOURCE_LOGGER} ccapi_hmac_test.cpp)
if(NOT CCAPI_LEGACY_USE_WEBSOCKETPP)
  add_dependencies(${NAME} boost rapidjson)
endif()
add_executable(${NAME}_hmac_openssl ${SOURCE_LOGGER} ccapi_hmac_test.cpp)
if(NOT CCAPI_LEGACY_USE_WEBSOCKETPP)
  add_dependencies(${NAME}_hmac_openssl boost rapidjson)
endif()
target_compile_definitions(${NAME}_hmac_openssl PRIVATE CCAPI_SHA_USE_OPENSSL)
gtest_discover_tests(${NAME})
gtest_discover_tests(${NAME}_hmac_openssl)
