set(NAME execution_management_binance_futures)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_SERVICE_EXECUTION_MANAGEMENT)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_BINANCE_FUTURES)
add_executable(${NAME} ${SOURCE_LOGGER} test.cpp)
target_link_libraries(${NAME} gtest_main)
gtest_discover_tests(${NAME})
